crates/vexor-compiler/tests/golden/error/input/basic.vx
-- missing let
r = 10
export Circle(r)
